add: jwt auth for api and refactoring code
